[gd_scene format=3 uid="uid://d0pdgcgiy8lv3"]

[ext_resource type="Script" uid="uid://clvce3cbhmrcd" path="res://Scripts/UI/main_menu.gd" id="1_mrfpk"]
[ext_resource type="Texture2D" uid="uid://bov2q5bln123h" path="res://Assets/Background/paralax_paper/paper_background_0.png" id="2_4pqbp"]
[ext_resource type="Texture2D" uid="uid://de6j76gjijlwa" path="res://Assets/Background/paralax_paper/normal_background_0.png" id="2_jewm6"]
[ext_resource type="Script" uid="uid://d2q6conu06isq" path="res://Data/Resources/Backgrounds/paralax_bg_data.gd" id="2_q6o50"]
[ext_resource type="Resource" uid="uid://jj6hs8jn0lt6" path="res://Data/Resources/Backgrounds/normal_bg.tres" id="3_46hhv"]
[ext_resource type="Texture2D" uid="uid://bpmkgur61fey7" path="res://Assets/Background/paralax_paper/normal_background_1.png" id="3_cejvf"]
[ext_resource type="Texture2D" uid="uid://di2d3gm07kxk5" path="res://Assets/Background/paralax_paper/paper_background_1.png" id="3_gih0s"]
[ext_resource type="Resource" uid="uid://crmgew4t6i8a5" path="res://Data/Resources/Backgrounds/vampire_bg.tres" id="3_oslnl"]
[ext_resource type="Texture2D" uid="uid://c80yokucqalje" path="res://Assets/Background/paralax_paper/paper_background_2.png" id="4_k33u3"]
[ext_resource type="Resource" uid="uid://dokh1xnyk3dab" path="res://Data/Resources/Backgrounds/paper_bg.tres" id="4_oslnl"]
[ext_resource type="Texture2D" uid="uid://bonh7j2w4flnm" path="res://Assets/Background/paralax_paper/normal_background_2.png" id="4_ru8vt"]
[ext_resource type="Resource" uid="uid://cxg8l3ojjy02l" path="res://Data/Resources/Backgrounds/sun_bg.tres" id="5_46hhv"]
[ext_resource type="Texture2D" uid="uid://dx2rp7hv4ymqa" path="res://Assets/Background/paralax_paper/paper_background_3.png" id="5_lrjdf"]
[ext_resource type="Texture2D" uid="uid://bq7x54afto6qr" path="res://Assets/Background/paralax_paper/normal_background_3.png" id="5_ypsd1"]
[ext_resource type="Texture2D" uid="uid://jcwsl3010f7d" path="res://Assets/UI/swipe_menu.png" id="6_4pqbp"]
[ext_resource type="Script" uid="uid://c6xflvasbfdi4" path="res://Scripts/UI/rich_text_gradient.gd" id="7_gih0s"]
[ext_resource type="FontFile" uid="uid://bhyvih0pkaa2x" path="res://Data/Fonts/hollywood_hills/SF Hollywood Hills.ttf" id="7_jewm6"]
[ext_resource type="Resource" uid="uid://kn2a4tjbdi6b" path="res://Data/Resources/Backgrounds/warewolf_bg.tres" id="7_tr32r"]
[ext_resource type="FontFile" uid="uid://7eubtfckrpev" path="res://Data/Fonts/hollywood_hills/SF Hollywood Hills Bold.ttf" id="8_cejvf"]
[ext_resource type="FontFile" uid="uid://i0kcjtxd4bem" path="res://Data/Fonts/hollywood_hills/SF Hollywood Hills Bold Italic.ttf" id="9_ru8vt"]
[ext_resource type="FontFile" uid="uid://cnl5mcjfg8lqg" path="res://Data/Fonts/hollywood_hills/SF Hollywood Hills Italic.ttf" id="10_ypsd1"]

[sub_resource type="Gradient" id="Gradient_k33u3"]
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(0.08898779, 0.41268727, 0.6504432, 1, 0.5903655, 0.79595846, 0.98337847, 1, 0.08898779, 0.41268727, 0.6504432, 1)
metadata/_snap_enabled = true
metadata/_snap_count = 20

[sub_resource type="RichTextEffect" id="RichTextEffect_lrjdf"]
script = ExtResource("7_gih0s")
gradient = SubResource("Gradient_k33u3")
metadata/_custom_type_script = "uid://c6xflvasbfdi4"

[sub_resource type="FontVariation" id="FontVariation_jewm6"]
base_font = ExtResource("7_jewm6")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cejvf"]
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.12156863, 0.43529412, 0.67058825, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="Animation" id="Animation_tr32r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/ColorRect/Label:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_hbsmt"]
resource_name = "show_slogan"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/ColorRect/Label:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 3.5, 4.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0gipi"]
_data = {
&"RESET": SubResource("Animation_tr32r"),
&"show_slogan": SubResource("Animation_hbsmt")
}

[node name="MainMenu" type="Control" unique_id=1950026450]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset_ratio = Vector2(0.5, 0.5)
script = ExtResource("1_mrfpk")
backgrounds = Array[ExtResource("2_q6o50")]([ExtResource("3_oslnl"), ExtResource("3_46hhv"), ExtResource("4_oslnl"), ExtResource("5_46hhv"), ExtResource("7_tr32r")])

[node name="ColorRect" type="ColorRect" parent="." unique_id=257114754]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="LayeredBackgorund1" type="Control" parent="." unique_id=2134188448]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background0" type="TextureRect" parent="LayeredBackgorund1" unique_id=934308437]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.05, 1.05)
pivot_offset_ratio = Vector2(0.5, 0.5)
texture = ExtResource("2_jewm6")

[node name="Background1" type="TextureRect" parent="LayeredBackgorund1" unique_id=196329748]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.05, 1.05)
pivot_offset_ratio = Vector2(0.5, 0.5)
texture = ExtResource("3_cejvf")

[node name="Background2" type="TextureRect" parent="LayeredBackgorund1" unique_id=73773935]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.05, 1.05)
pivot_offset_ratio = Vector2(0.5, 0.5)
texture = ExtResource("4_ru8vt")

[node name="Background3" type="TextureRect" parent="LayeredBackgorund1" unique_id=25604741]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.05, 1.05)
pivot_offset_ratio = Vector2(0.5, 0.5)
texture = ExtResource("5_ypsd1")

[node name="LayeredBackgorund2" type="Control" parent="." unique_id=1167598210]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background0" type="TextureRect" parent="LayeredBackgorund2" unique_id=141459709]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.05, 1.05)
pivot_offset_ratio = Vector2(0.5, 0.5)
texture = ExtResource("2_4pqbp")

[node name="Background1" type="TextureRect" parent="LayeredBackgorund2" unique_id=189214532]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.05, 1.05)
pivot_offset_ratio = Vector2(0.5, 0.5)
texture = ExtResource("3_gih0s")

[node name="Background2" type="TextureRect" parent="LayeredBackgorund2" unique_id=562306238]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.05, 1.05)
pivot_offset_ratio = Vector2(0.5, 0.5)
texture = ExtResource("4_k33u3")

[node name="Background3" type="TextureRect" parent="LayeredBackgorund2" unique_id=2132153137]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.05, 1.05)
pivot_offset_ratio = Vector2(0.5, 0.5)
texture = ExtResource("5_lrjdf")

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=1900333119]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer" unique_id=1782838052]
modulate = Color(1, 1, 1, 0.68235296)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_4pqbp")

[node name="RichTextLabel2" type="RichTextLabel" parent="CanvasLayer" unique_id=1916850587]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -432.0
offset_top = -191.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/normal_font = ExtResource("7_jewm6")
theme_override_fonts/bold_font = ExtResource("8_cejvf")
theme_override_fonts/bold_italics_font = ExtResource("9_ru8vt")
theme_override_fonts/italics_font = ExtResource("10_ypsd1")
theme_override_font_sizes/normal_font_size = 73
theme_override_font_sizes/bold_font_size = 73
theme_override_font_sizes/bold_italics_font_size = 74
theme_override_font_sizes/italics_font_size = 89
bbcode_enabled = true
text = "[gradient  speed=0.5 span=8.0][i]United Stranges[/i][/gradient]"
horizontal_alignment = 1
vertical_alignment = 1
custom_effects = [SubResource("RichTextEffect_lrjdf")]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer" unique_id=1643792959]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -164.0
offset_right = 179.0
grow_vertical = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Button" type="Button" parent="CanvasLayer/MarginContainer" unique_id=1941237850]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_jewm6")
theme_override_font_sizes/font_size = 47
theme_override_styles/normal = SubResource("StyleBoxFlat_cejvf")
text = "START"

[node name="ColorRect" type="ColorRect" parent="CanvasLayer" unique_id=1387221573]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="CanvasLayer/ColorRect" unique_id=162350201]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "The friend of my friend is a friend
The enemy of my enemy is a friend
The friend of my enemy is an enemy
The enemy of my friend is an enemy"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=434669082]
libraries/ = SubResource("AnimationLibrary_0gipi")

[connection signal="pressed" from="CanvasLayer/MarginContainer/Button" to="." method="_on_button_pressed"]
